Fixed width overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,6 @@ body {
 
     background: linear-gradient(65deg, #000, #0F161C, #0B1D1F, #1A2C2E, #0D1216, #000, #1A2C2E);
     background-size: 400% 400%;
-    width: 100%;
     height: 100vh;
     animation: animate 20s ease infinite;
     min-height: 100vh;
